# QEMU-OUT-PASSES

./: .gitignore  CHANGELOG_TRACE_SIGNAL.md  CMakeLists.txt  README.md  tool_main.cpp
include/: Passes.td
lib/: ClockAnalysis.h  CombLogicExtractPass.cpp  CombTranslator.h  DffDemoPass.cpp  Passes.cpp  QEMUEmitCPass.cpp
scripts/: check_comb_not.sh
test/: README_TRACE_SIGNAL_ENHANCEMENTS.md  clock_and_enable.mlir  clock_only_process.mlir  test_double_xor.mlir  trace_signal_icmp.mlir  trace_signal_multi_not.mlir  trace_signal_sigextract.mlir
